.kustomize/ingresses/synology/ldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-ldap-service
spec:
  type: ClusterIP
  ports:
    - name: ldap
      port: 389         # For unencrypted LDAP
      targetPort: 389
      protocol: TCP
    - name: ldaps
      port: 636         # For LDAPS
      targetPort: 636
      protocol: TCP
