.kustomize/ingresses/synology/ldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology-ldap-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
spec:
  rules:
  - host: ldap.josephang.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synology-ldap
            port:
              number: 389
  tls:
  - hosts:
    - nas.josephang.space
    secretName: kopi-quest-tls
